# mkdocs-material-mark-as-read

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-package.yml
docs/: index.md
docs/config-reference/: index.md
docs/customization/button-style/: index.md
docs/quickstart/: index.md
mkdocs_mark_as_read/: config.py  plugin.py
mkdocs_mark_as_read/css/: mark-as-read-navlink-updater.css
mkdocs_mark_as_read/js/: mark-as-read-button.js  mark-as-read-navlink-updater.js  navlink-updater.js
mkdocs_material_mark_as_read/: plugin.py
mkdocs_material_mark_as_read/css/: mark-as-read-button.css
mkdocs_material_mark_as_read/js/: mark-as-read-button.js  mark-as-read-navlink-updater.js
overrides/partials/: content.html  mark-as-read-button.html
requirements/: dev.txt  docs.txt
