[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mkdocs_material_mark_as_read/"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.css"]

[project]
name = "mkdocs-material-mark-as-read"
version = "0.0.1"
dependencies = ["mkdocs"]
requires-python = ">=3.9"

[project.entry-points."mkdocs.plugins"]
mark-as-read = "mkdocs_material_mark_as_read.plugin:MarkAsReadPlugin"

[tool.ruff]
line-length = 100
